fixed alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,16 +3,12 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.container {
-    width: 60vw;
-    margin: auto;
-}
 
 .searchBar input {
     display: block;
     margin: 0 auto;
     margin-top: 20px;
-    padding-bottom: 20px ;
+    margin-bottom: 20px ;
     font-size: 1.5em;
     color: rgb(255, 123, 0);
     padding-left: 5px;
@@ -23,6 +19,8 @@
 }
 
 .gallery {
+    width: 80vw;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
     grid-template-rows: repeat(3, 200px);
@@ -31,8 +29,4 @@
     grid-auto-flow: dense;
   }
 
-.gallery img {
-    max-width: 200px;
-    max-height: 200px;
-    object-fit: cover;
-}
+
